--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ set(BINARY ${CMAKE_PROJECT_NAME}_test)
 enable_testing()
 
 # building tests
-file(GLOB_RECURSE test_sources "*.h*" "*.cpp*")
+file(GLOB_RECURSE test_sources "*.h*" "test_bbnd.cpp*" "main.cpp" "all*" "test_util*")
 add_executable(${BINARY} ${test_sources})
 add_test(NAME ${BINARY} COMMAND ${BINARY})
 
